# akeyless-grpc-rust

./: Cargo.toml  README.md  flake.nix
src/: akeyless_grpc.rs  akeyless_grpc.tonic.rs  lib.rs
