[package]
name = "akeyless_grpc"
version = "0.0.1"
edition = "2021"
description = "Rust library for interacting with the Akeyless API using gRPC"
license = "Apache-2.0"
documentation = "https://github.com/akeylesslabs/akeyless-grpc-rust"
homepage = "https://github.com/akeylesslabs/akeyless-grpc-rust"
repository = "https://github.com/akeylesslabs/akeyless-grpc-rust"

[dependencies]
prost = "0.13.1"
prost-types="0.13.1"
tokio = { version = "1.38.1", features = ["macros", "rt-multi-thread"] }
tonic = "0.12.1"

